# routes/contact.js
@@ -6,10 +6,11 @@ const controller = require('../controllers/contact');
  * @swagger
  * /contacts:
  *   get:
- *     description: Get all contacts
+ *     summary: Get all contacts
+ *     tags: [Contacts]
  *     responses:
  *       200:
- *         description: Success
+ *         description: Returns a list of contacts
  */
 router.get('/', controller.getAll);
 
@@ -17,19 +18,123 @@ router.get('/', controller.getAll);
  * @swagger
  * /contacts/{id}:
  *   get:
- *     description: Get contact by ID
+ *     summary: Get a contact by ID
+ *     tags: [Contacts]
  *     parameters:
  *       - name: id
  *         in: path
  *         required: true
+ *         schema:
+ *           type: string
+ *         description: The MongoDB ID of the contact
  *     responses:
  *       200:
- *         description: Success
+ *         description: Contact found
+ *       404:
+ *         description: Contact not found
  */
 router.get('/:id', controller.getById);
 
+/**
+ * @swagger
+ * /contacts:
+ *   post:
+ *     summary: Create a new contact
+ *     tags: [Contacts]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             required:
+ *               - firstName
+ *               - lastName
+ *               - email
+ *               - favoriteColor
+ *               - birthday
+ *             properties:
+ *               firstName:
+ *                 type: string
+ *               lastName:
+ *                 type: string
+ *               email:
+ *                 type: string
+ *               favoriteColor:
+ *                 type: string
+ *               birthday:
+ *                 type: string
+ *     responses:
+ *       201:
+ *         description: Contact created
+ *       400:
+ *         description: Missing or invalid fields
+ */
 router.post('/', controller.create);
+
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   put:
+ *     summary: Update a contact
+ *     tags: [Contacts]
+ *     parameters:
+ *       - name: id
+ *         in: path
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: The ID of the contact to update
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             required:
+ *               - firstName
+ *               - lastName
+ *               - email
+ *               - favoriteColor
+ *               - birthday
+ *             properties:
+ *               firstName:
+ *                 type: string
+ *               lastName:
+ *                 type: string
+ *               email:
+ *                 type: string
+ *               favoriteColor:
+ *                 type: string
+ *               birthday:
+ *                 type: string
+ *     responses:
+ *       204:
+ *         description: Contact updated successfully
+ *       404:
+ *         description: Contact not found
+ */
 router.put('/:id', controller.update);
+
+/**
+ * @swagger
+ * /contacts/{id}:
+ *   delete:
+ *     summary: Delete a contact
+ *     tags: [Contacts]
+ *     parameters:
+ *       - name: id
+ *         in: path
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: The ID of the contact to delete
+ *     responses:
+ *       200:
+ *         description: Contact deleted
+ *       404:
+ *         description: Contact not found
+ */
 router.delete('/:id', controller.remove);
 
 module.exports = router;
